--- a/scss/_chrome.scss
+++ b/scss/_chrome.scss
@@ -14,13 +14,13 @@
 
   kbd {
     background-color: var(--table-border-color);
-    border-radius: 0.3rem;
-    box-shadow: inset 0 -0.1rem 0 var(--theme-hover);
+    border-radius: 0.4em;
+    box-shadow: inset 0 -0.3em 0 var(--theme-popup-border);
     display: inline-block;
     font-size: var.$code-font-size;
     font-family: var.$mono-font;
-    margin: 0 0.1rem;
-    padding: 0.2rem 0.3rem;
+    margin: 0 0.14em;
+    padding: 0.3em 0.4em;
     vertical-align: top;
   }
 }
