--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -11,7 +11,7 @@ $menu-bar-height: 2.6rem;
 
 $jump-shift: 1.25rem;
 
-$base-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, Ubuntu, sans-serif;
+$base-font: -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, Ubuntu, sans-serif;
 $mono-font: 'Source Code Pro', Consolas, 'Ubuntu Mono', Menlo, 'DejaVu Sans Mono', monospace;
 $italic-font: 'Open Sans', sans-serif;
 
