--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -71,7 +71,7 @@
         <div class="right-buttons">
           {{#if git_repository_url}}
           <address>
-            <a href="{{git_repository_url}}" title="Open the GitHub repository" aria-label="Open the GitHub repository." target="_blank" rel="noopener">
+            <a href="{{git_repository_url}}" title="Open the GitHub repository" aria-label="Open the GitHub repository." target="_blank">
               <div class="icon-github fa-icon"></div>
             </a>
           </address>
